fixing low contrast in collections zoom modal

--- a/themes/atalanta/assets/scss/components/_collections.scss
+++ b/themes/atalanta/assets/scss/components/_collections.scss
@@ -989,7 +989,7 @@
 
 		.all-tags {
 			font-size: 11px;
-			color: #808080;
+			color: #b2b2b2;
 		}
 
 		.slide {
